# CLI-ToDo-Notes

./: .gitignore  README.md  main.py  pyproject.toml  summarizer.py
